# crew_auditor

./: .gitignore  README.md  pyproject.toml
output_examples/: report_01.md  report_02.md  report_03.md  report_04.md  report_05.md
src/crew_auditor/: crew.py  main.py
src/crew_auditor/config/: agents.yaml  tasks.yaml
src/crew_auditor/tools/: git_hub_code_fetcher_tool.py  github_tools.py  report_writing_tool.py
src/crew_auditor_enhancing_code_quality_with_crewai/: crew.py  main.py
src/crew_auditor_enhancing_code_quality_with_crewai/config/: agents.yaml  tasks.yaml
