[project]
name = "crew_auditor"
version = "0.1.0"
description = "crew_auditor using crewAI"
authors = [{ name = "Daniel Barreto", email = "danielfsbarreto@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "pygithub>=2.5.0",
    "spider-client>=0.1.25",
]

[project.scripts]
crew_auditor = "crew_auditor.main:run"
run_crew = "crew_auditor.main:run"
train = "crew_auditor.main:train"
replay = "crew_auditor.main:replay"
test = "crew_auditor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
